tests/NormalTests/paczka1/fuzzy1/37575971.err
Error in line 1: AyihvS89j3 S200 91,5
Error in line 3: y4yzMaS A655 56,9
Error in line 8: y4yzMaS S162 64,9
Error in line 13: qM10ijFuw A955 33,1
Error in line 23: C7okFA5c9M7 S162 90,6
Error in line 25: AyihvS89j3 S162 972,4
Error in line 29: AyihvS89j3 S200 48,7
Error in line 38: AyihvS89j3 S162 -1,4
Error in line 33: A955 S200 54,9
